--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
 <body>
     <header class="header">    
         <div class="header_container container">
-            <div class="menu_shadow">
-                <div class="header_burger">
-                    <span></span>
-                </div>
             <div class="menu_wrapper">
-                    <a class="logo_img" href="#"><img src="img/logo/glopt_649.png" alt="img_logo"></a>
+                <a class="logo_img" href="#"><img src="img/logo/glopt_649.png" alt="img_logo"></a>
                 <div class="header_menu">
                     <nav>
                         <ul class="menu">
@@ -39,14 +35,12 @@
                     <button class="nav_btn">Перезвоните мне</button>
                 </div>
             </div>
-            </div>
             <h3>Global Opt - логистика полного цикла из Китая в Россию</h3>
             <h1>ДОСТАВКА ГРУЗОВ ИЗ КИТАЯ</h1>
             <h2>В РОССИЮ И СНГ ВСЕМИ ВИДАМИ ТРАНСПОРТА</h2>     
-            <div class="divider_class">
-                <span></span>
-            </div>
-            <div class="divider_img"><img src="img/divider/ellipse_1_197.png" alt="divider"></div>
+            <div class="divider">
+                <img src="img/divider/ellipse_1_197.png" alt="e">
+            </div>   
             <div class="content">
                 <div class="content_items">
                     <div class="item_logo"><img src="img/icons/ikonka_200.png" alt="icon"></div>
@@ -233,14 +227,13 @@
             <div class="consul_img_wrapper">
                 <img class="consul_img" src="img/icons/layers7.png" alt="price">
             </div>
-            <div class="form_input">
             <form action="">
                 <input type="text" name="Name" placeholder="Ваше имя...">
                 <input type="text" name="tel" placeholder="Ваш номер телефона...">
                 <input type="text" name="email" placeholder="Ваш e-mail...">
             </form>
             <div class="submit">
-                <input type="submit" value="Отправить заявку">
+                <input type="submit">
             </div>
         </div>
     </section>
@@ -262,7 +255,7 @@
 
 <!-- start howto -->
 
-<!-- <section class="howto">
+<section class="howto">
     <div class="howto_container container">
         <h3 class="howto_title title">Схема работы с нами</h3>
         <div class="howto_wrapper">
@@ -305,13 +298,13 @@
             </div>
         </div>
     </div>
-</section> -->
+</section>
 
 <!-- end howto -->
 
 <!-- start reviews -->
 
-<!-- <section class="reviews">
+<section class="reviews">
     <div class="reviews_container container">
         <h3 class="reviews_title title">отзывы наших клиентов</h3>
         <div class="small_divider"></div>
@@ -323,53 +316,29 @@
                 <div class="carousel_subtitle">Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
             </div>
             <div class="carousel_item">
-                <img class="carousel_img" src="img/slider/put_your_image_13792.jpg" alt="ann">
-                <div class="carousel_title">Петров Олег</div>
-                <div class="carousel_subtitle">Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды.</div>
+                <img class="carousel_img" src="img/slider/ellipse_3_copy_2_494.jpg" alt="ann">
+                <div class="carousel_title">Анисимова Ольга</div>
+                <div class="carousel_subtitle">Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
             </div>
             <div class="carousel_item">
-                <img class="carousel_img" src="img/slider/ellipse_3.jpg" alt="ann">
-                <div class="carousel_title">Ниманова Анна</div>
-                <div class="carousel_subtitle">Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользоваться услугами компании</div>
+                <img class="carousel_img" src="img/slider/ellipse_3_copy_2_494.jpg" alt="ann">
+                <div class="carousel_title">Анисимова Ольга</div>
+                <div class="carousel_subtitle">Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
             </div>
         </div>  
     </div>
-</section> -->
+</section>
 
 <!-- end reviews -->
 
 <!-- start feedback -->
 
-<!-- <section class="feedback">
+<section class="feedback">
     <div class="feedback_container container">
-        <div class="feedback_wrapper">
-            <div class="feedback_title">Остались вопросы?</div>
-            <div class="feedback_subtitle">Напишите нам!</div>
-            <form action="">
-                <input type="text" name="name" placeholder="Ваше имя...">
-                <input type="tel" name="tel" placeholder="Ваш номер телефона...">
-                <input type="email" name="email" placeholder="Ваш e-mail...">
-                <textarea name="message" id="mess" cols="30" rows="10"></textarea>
-                <input type="submit">
-            </form>
-        </div>
-    </div>
-</section> -->
-
-<!-- end feedback -->
-
-<!-- start map -->
-
-<!-- <section class="map">
-    <div id="map"></div>
-</section> -->
-
+        
+</section>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
-    <script src="js/script.burger.js"></script>
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=d5421e18-9bba-4445-bc66-4c70462ce601
-    " type="text/javascript"></script>
-    <script src="icon_customImage.js" type="text/javascript"></script>
 </body>
 </html>
