--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/img/logo/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -21,11 +22,11 @@
                 <div class="header_menu">
                     <nav>
                         <ul class="menu">
-                            <li><a href="#">Преимущества</a></li>
-                            <li><a href="#">Наша работа</a></li>
-                            <li><a href="#">Цены</a></li>
-                            <li><a href="#">Отзывы</a></li>
-                            <li><a href="#">Контакты</a></li>
+                            <li><a href="#why_we">Преимущества</a></li>
+                            <li><a href="#Our_work">Наша работа</a></li>
+                            <li><a href="#price">Цены</a></li>
+                            <li><a href="#reviews">Отзывы</a></li>
+                            <li><a href="#feedback_us">Контакты</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -36,7 +37,23 @@
                             <li>+7 (926) 423 01 00</li>
                         </ul>
                     </a>
-                    <button class="nav_btn">Перезвоните мне</button>
+                    <button class="nav_btn"><a class="myLinkModal" href="#">Перезвоните мне</a>
+                        <div id="myModal">
+                          <span id="myModal__close" class="close">&#10006;</span>
+                          <div class="pop_consul_img_wrapper">
+                            <img class="pop_consul_img" src="img/icons/layers7.png" alt="price">
+                        </div>
+                        <div class="pop_form_input">
+                        <form action="">
+                            <input type="text" name="Name" placeholder="Ваше имя...">
+                            <input type="text" name="tel" placeholder="Ваш номер телефона...">
+                        </form>
+                        <div class="pop_submit">
+                            <input type="submit" value="Заказать звонок">
+                        </div>
+                    </div>
+                        </div>
+                        <div id="myOverlay"></div></button>
                 </div>
             </div>
             </div>
@@ -75,7 +92,7 @@
 
     <!-- start work_with_us -->
 
-    <section class="work_with_us">
+    <section class="work_with_us" id="why_we">
         <div class="work_with_us_container container">
             <h3 class="title_work_with_us title">Преимущества работы с GlobalOpt</h3>
             <div class="work_with_us_wrapper">
@@ -144,7 +161,7 @@
 
     <!--  start shipping -->
 
-    <section class="shipping">
+    <section class="shipping" id="Our_work">
         <div class="shipping_container container">
             <h3 class="shipping_title title">Наша работа - больше чем просто доставка</h3>
             <div class="small_divider"></div>
@@ -185,7 +202,7 @@
 
     <!-- start price -->
 
-    <section class="price">
+    <section class="price" id="price">
         <div class="price_container container">
             <h3 class="price_title title">Цены на любой вариант доставки</h3>
             <div class="small_divider"></div>
@@ -199,7 +216,7 @@
                     <div class="price_item_cost">от 0,3$ за 1 кг</div>
                     <div class="price_item_subtitle">Морские перевозки грузов из Китая в Россию за 35 дней 
                         с прохождением таможни</div>
-                    <button class="price_btn">Подробнее</button>
+                    <button class="price_btn"><a href="#consultation">Подробнее</a></button>
                 </div>
                 <div class="price_item">
                     <div class="price_item_title">Ж/Д доставка</div>
@@ -208,7 +225,7 @@
                     <div class="price_item_cost">от 1$ за 1 кг</div>
                     <div class="price_item_subtitle">ЖД перевозки грузов из Китая в Россию от 2 недель 
                         с прохождением таможни</div>
-                    <button class="price_btn">Подробнее</button>
+                    <button class="price_btn"><a href="#consultation">Подробнее</a></button>
                 </div>
                 <div class="price_item">
                     <div class="price_item_title">Автодоставка</div>
@@ -217,7 +234,7 @@
                     <div class="price_item_cost">от 1$ за 1 кг</div>
                     <div class="price_item_subtitle">Автоперевозки грузов из Китая в Россию от 2 недель 
                         с прохождением таможни</div>
-                    <button class="price_btn">Подробнее</button>
+                    <button class="price_btn"><a href="#consultation">Подробнее</a></button>
                 </div>
                 <div class="price_item">
                     <div class="price_item_title">Авиа доставка</div>
@@ -226,10 +243,10 @@
                     <div class="price_item_cost">от 6$ за 1 кг</div>
                     <div class="price_item_subtitle">Авиаперевозки грузов из Китая в Россию до 2 недель 
                         с прохождением таможни</div>
-                    <button class="price_btn">Подробнее</button>
+                    <button class="price_btn"><a href="#consultation">Подробнее</a></button>
                 </div>
             </div>
-            <h3 class="consul_title title">Заказать бесплатную консультацию</h3>
+            <h3 class="consul_title title" id="consultation">Заказать бесплатную консультацию</h3>
             <div class="consul_img_wrapper">
                 <img class="consul_img" src="img/icons/layers7.png" alt="price">
             </div>
@@ -311,7 +328,7 @@
 
 <!-- start reviews -->
 
-<section class="reviews">
+<section class="reviews" id="reviews">
     <div class="reviews_container container">
         <h3 class="reviews_title title">отзывы наших клиентов</h3>
         <div class="small_divider"></div>
@@ -340,7 +357,7 @@
 
 <!-- start feedback -->
 
-<section class="feedback">
+<section class="feedback" id="feedback_us">
     <div class="feedback_container container">
         <div class="feedback_wrapper">
             <div class="title_wrapper">
@@ -401,5 +418,6 @@
     <script src="js/script.js"></script>
     <script src="js/script.burger.js"></script>
     <script src="icon_customImage.js" type="text/javascript"></script>
+    <script src="js/popup.js"></script>
 </body>
 </html>
